tests/fixtures/invalid/duplicate_symbols.avsc
{
  "type": "enum",
  "name": "Colors",
  "symbols": ["RED", "GREEN", "RED"]
}
